syntax = "proto2";

package scheduler;

service Scheduler {
  rpc Test(Empty) returns (Empty) {}
  rpc TryAccess(AccessResource) returns (ResourceResult) {}
}

message Empty {}

message AccessResource {
  required string name = 1;
}

message ResourceResult {
  optional int64 token = 1;
}